--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -27,8 +27,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: pnpm
-
+          # cache: pnpm
+      - name: Install PNPM
+        run: npm i -g pnpm
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
