--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: 18
           # cache: pnpm
       - name: Install PNPM
-        run: npm i -g pnpm
+        run: npm i -g pnpm@9.1.1
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
