--- a/packages/host/android/app/build.gradle
+++ b/packages/host/android/app/build.gradle
@@ -122,12 +122,16 @@ android {
             keyPassword 'android'
         }
         release {
-            if (project.hasProperty('SUPERAPPTEMPLATE_UPLOAD_STORE_FILE')) {
-                storeFile file(SUPERAPPTEMPLATE_UPLOAD_STORE_FILE)
-                storePassword SUPERAPPTEMPLATE_UPLOAD_STORE_PASSWORD
-                keyAlias SUPERAPPTEMPLATE_UPLOAD_KEY_ALIAS
-                keyPassword SUPERAPPTEMPLATE_UPLOAD_KEY_PASSWORD
-            }
+            // if (project.hasProperty('SUPERAPPTEMPLATE_UPLOAD_STORE_FILE')) {
+            //     storeFile file(SUPERAPPTEMPLATE_UPLOAD_STORE_FILE)
+            //     storePassword SUPERAPPTEMPLATE_UPLOAD_STORE_PASSWORD
+            //     keyAlias SUPERAPPTEMPLATE_UPLOAD_KEY_ALIAS
+            //     keyPassword SUPERAPPTEMPLATE_UPLOAD_KEY_PASSWORD
+            // }
+            storeFile file('debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
         }
     }
     buildTypes {
@@ -166,7 +170,7 @@ dependencies {
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
     implementation("androidx.core:core-splashscreen:1.0.0")
-    
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
